--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-node_modules
+node_modules/
+dist/
+build/
+supabase/
+.next/
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.env
+proxies.json
