--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@types/crypto-js": "^4.0.1",
     "@types/memory-cache": "^0.2.1",
+    "@types/node": "^17.0.35",
     "@types/nprogress": "^0.2.0",
     "@types/numeral": "^2.0.1",
     "@types/pluralize": "^0.0.29",
